[package]
name = "pgingester"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive", "env"] }
csv = "1.3.1"
postgres = { version = "0.19.9", features = ["with-chrono-0_4"] }
tokio-postgres = "0.7"
bytes = "1.0"
byteorder = "1.0"
colored = "2.1.0"
prettytable = "0.10.0"
openssl = "0.10.68"
postgres-openssl = "0.5.0"
rayon = "1.10.0"
